# matrix

./: .gitignore  CMakeLists.txt  readme.md
avl_tree/: CMakeLists.txt  main.cpp
avl_tree/include/: avl_node.hpp  avl_range.tpp  avl_tree.hpp  avl_walk.tpp  utils.hpp
avl_tree/ui/: ui.cpp  ui.hpp
debug_utils/time_control/: time_control.hpp
efficiency_comp/: data.txt  graph.py  start_data.txt
graph_lib/: CMakeLists.txt  graphviz.h  graphviz.tpp  tree_dump.dot
matrix/: CMakeLists.txt  compare_mul.cpp  find_det.cpp  lazy.cpp  main.cpp  mul_order.cpp
matrix/include/: lazy_matrix.hpp  matrix.hpp  matrix_buf.hpp  matrix_chain.hpp  matrix_execeptions.hpp  matrix_oper.hpp  rows.hpp
matrix/ui/: ui.cpp  ui.hpp
src/: CMakeLists.txt  main.cpp
src/rb_tree_ui/: ui.cpp  ui.hpp
tests/: CMakeLists.txt
tests/end_to_end_tests/: chain_test_gen.py  cow_e2e_test.py  det_test_generator.py  e2e_test.py  mx_power_gen.py  test_generator.py
tests/unit_tests/: avl_tree_tests.hpp  big_five_tests.hpp  cow_matrix_op_test.hpp  main.cpp  matrix_big_five_test.hpp  matrix_cow.hpp  matrix_meth_test.hpp  matrix_op_test.hpp  matrixes_chain_test.hpp  range_tests.hpp  rotate_tests.hpp  unit_tests.hpp
